<resources>

    <string name="app_name">Quản lý bán hàng</string>


    <string name="kho">Kho</string>
    <string name="bang_gia">Bảng Giá</string>
    <string name="da_ban">Đã Bán</string>
    <string name="thu_chi">Thu &amp; chi</string>
    <string name="them">Thêm</string>
    <string name="stt">STT</string>
    <string name="ma_sp">Mã SP</string>
    <string name="ten_sp">Tên sản phẩm</string>
    <string name="sl_nhap">SL nhập</string>
    <string name="sl_ton">SL tồn</string>
    <string name="sl_ban_ra">SL bán ra</string>
    <string name="gia_de_xuat">Giá đề xuất</string>
    <string name="gia_nhap">Giá nhập</string>
    <string name="ban_gia">Bán giá(VND/SP)</string>
    <string name="sl">SL</string>
    <string name="lai">Lãi</string>
    <string name="von">Vốn</string>
    <string name="tong_thu">Tổng thu</string>
    <string name="thoi_gian">Thời Gian</string>
    <string name="ngay">Ngày</string>
    <string name="them_sp_vao_kho">Thêm SP Vào Kho</string>
    <string name="mat_khau">Mật khẩu</string>
    <string name="tien_te">Đơn vị tiền tệ</string>
    <string name="giao_dien">Giao diện</string>
    <string name="an_san_pham">Ẩn sản phẩm</string>
    <string name="xuat">Xuất ra tệp</string>
    <string name="nhap">Nhập vào tệp</string>
    <string name="title">Quản lý bán hàng</string>
    <string name="ban_san_pham">Bán sản phẩm</string>
    <string name="ban_ra">BÁN RA</string>
    <string name="huy">Hủy</string>
    <string name="nhap_them_san_pham">Nhập thêm sản phẩm</string>
    <string name="sua_san_pham">Sửa sản phẩm</string>
    <string name="xoa_san_pham">Xóa sản phẩm</string>
    <string name="tat">Tắt</string>
    <string name="don_vi_tien_te">Đơn vị tiền tệ</string>
    <string name="san_pham_da_an">Sản phẩm đã ẩn</string>
    <string name="xuat_ra_tep">Xuất ra tệp</string>
    <string name="nhap_vao">Nhập vào từ</string>
    <string name="chuc_nang_sap_ra_mat">Chức năng sắp ra mắt</string>
    <string name="giadx">Giá DX</string>
    <string name="gia">Giá</string>
    <string name="ten">Tên</string>
    <string name="ma">Mã</string>
    <string name="san_pham">Sản phẩm</string>
    <string name="chon_sp">Chọn sản phẩm</string>
    <string name="so_luong_2">Số lượng</string>
    <string name="thoi_gian_ban_sp">Thời gian bán sản phẩm</string>
    <string name="gia_ban_ra">Giá bán ra</string>
    <string name="chon_san_pham">Chọn sản phẩm</string>
    <string name="chon">Chọn</string>
    <string name="het_hang">Hết hàng</string>
    <string name="tat_ca">Tất cả</string>
    <string name="ten_sp_2">Tên SP</string>
    <string name="hom_nay">Hôm nay</string>
    <string name="tuan">Tuần này</string>
    <string name="nam">Năm</string>
    <string name="tim_kiem">Tìm kiếm</string>
    <string name="xong">Xong</string>
    <string name="chua_chon_sam_pham">Chưa chọn sản phẩm</string>
    <string name="chua_chon_sp">Chưa chọn sản phẩm</string>
    <string name="gia_ban_ra_khong_hop_le">Giá bán ra không hợp lệ</string>
    <string name="sl_san_pham_khong_hop_le">Số lượng sản phẩm không hợp lệ</string>
    <string name="xay_ra_loi">Xảy ra lỗi</string>
    <string name="them_sp_thanh_cong">Thêm sản phẩm thành công</string>
    <string name="tong">Tổng</string>
    <string name="nhap_so_luong_can_them">Nhập số lượng cần thêm</string>
    <string name="nhap_so_luong">Nhập số lượng</string>
    <string name="thao_tac_thanh_cong">Thao tác thành công</string>
    <string name="luu_lai">Lưu lại</string>
    <string name="ten_sp_validate">Tên sản phẩm không hợp lệ</string>
    <string name="ma_sp_khong_hop_le">Mã sản phẩm không hợp lệ!</string>
    <string name="ten_sp_khong_hop_le">Tên sản phẩm không hợp lệ!</string>
    <string name="so_luong_khong_hop_le">Số lượng không hợp lệ!</string>
    <string name="gia_nhap_khong_hop_le">Giá nhập không hợp lệ!</string>
    <string name="gia_dx_khong_hop_le">Giá đề xuất không hợp lệ!</string>
    <string name="ma_">Mã </string>
    <string name="_da_ton_tai"> đã tồn tại!</string>
    <string name="ten_san_pham_">"Tên sản phẩm "</string>
    <string name="san_pham_">Sản phẩm </string>
    <string name="xoa">Xóa</string>
    <string name="ban_co_muon_xoa">Bạn có muốn xóa </string>
    <string name="language">Languages</string>
    <string name="nhap_mat_khau_cua_ban">Nhập mật khẩu của bạn</string>
    <string name="sai_mat_khau">Sai mật khẩu!</string>
    <string name="nhap_lai_mat_khau_moi_cua_ban">Nhập lại mật khẩu mới của bạn</string>
    <string name="nhap_mat_khau_moi_cua_ban">Nhập mật khẩu mới của bạn</string>
    <string name="nhap_mat_khau_cu_cua_ban">Nhập mật khẩu cũ của bạn</string>
    <string name="hai_mat_khau_khong_khop">Hai mật khẩu không khớp</string>
    <string name="bat_mat_khau">Bật mật khẩu</string>
    <string name="doi_mat_khau">Đổi mật khẩu</string>
    <string name="tat_mat_khau">Tắt mật khẩu</string>
    <string name="ban_co_muon_sao_luu">File database.db sẽ ghi đè tệp cũ.Bạn có muốn sao lưu?</string>
    <string name="dong_y">Đồng ý</string>
    <string name="ban_co_muon_thay_the_bang_du_lieu_cu">Bạn có muốn thay bằng dữ liệu cũ?</string>
    <string name="cai_dat">Thêm</string>


</resources>
