<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_top_header"
    android:layout_width="360dp"
    android:layout_height="48dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_ma_sp"
        style="@style/textTableItem"
        android:layout_width="60dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/layer_list_border_item"
        android:text="@string/ma_sp" />

    <TextView
        android:id="@+id/tv_ten_sp"
        style="@style/textTableItem"
        android:layout_width="180dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/layer_list_border_item"
        android:text="@string/ten_sp" />

    <TextView
        android:id="@+id/tv_gia_dx"
        style="@style/textTableItem"
        android:layout_width="120dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/layer_list_border_item"
        android:text="@string/gia_de_xuat" />

</LinearLayout>